# avendehut

./: .editorconfig  .env.example  .gitignore  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
avendehut/: __init__.py  cli.py
avendehut/commands/: build.py  clean.py  export.py  open.py  search.py  watch.py
avendehut/utils/: htmlgen.py  manifest.py  metadata.py  onedrive.py
html_template/: index.html  script.js  style.css
tests/: test_build.py  test_cli.py  test_manifest.py  test_metadata.py
