[tool.poetry]
name = "avendehut"
version = "0.1.0"
description = "CLI to scan books, extract metadata, and generate a searchable HTML catalog."
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/yourusername/avendehut"
repository = "https://github.com/yourusername/avendehut"
keywords = ["books", "metadata", "catalog", "cli", "onedrive"]
packages = [{ include = "avendehut" }]

[tool.poetry.scripts]
avendehut = "avendehut.cli:main"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
click = "^8.1.7"
rich = "^13.7.1"
pydantic = "^2.8.2"
watchdog = "^4.0.1"
msal = "^1.29.0"
requests = "^2.32.3"
tqdm = "^4.66.4"
ebooklib = "^0.18"
pypdf = "^5.0.1"
python-slugify = "^8.0.4"
chardet = "^5.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.11.1"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [
  "tests/",
]

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

